--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>学生活动管理系统</title>
   <% if (process.env.NODE_ENV === 'production') { %>
     <!-- 生产环境 -->
-    <script>document.write('<script src="./config/index.js?t=' + new Date().getTime() + '"><\/script>');</script>
+    <script>document.write('<script src="./config/index.js?t=' + new Date().getTime() + '"><\/script>')</script>
   <% }else { %>
     <!-- 开发环境 -->
     <link rel="shortcut icon" type="image/x-icon" href="static/img/logo_title.png">
